# oryx-bench

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  flake.nix  lefthook.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: v0.2-flash-issues.md  v0.2-show-improvements.md
examples/voyager-dvorak/: .gitignore  kb.toml  layout.toml
examples/voyager-dvorak/overlay/: README.md  features.toml
examples/voyager-dvorak/pulled/: revision.json
packaging/aur/: PKGBUILD
packaging/docker/: Dockerfile  README.md  pin.txt
packaging/linux/: 50-zsa.rules
packaging/nix/: README.md  example-configuration.nix  module.nix
scripts/: install.sh
skills/oryx-bench/: SKILL.md
skills/oryx-bench/reference/: command-reference.md  lint-rules.md  overlay-cookbook.md  workflows.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: attach.rs  build.rs  detach.rs  diff.rs  explain.rs  find.rs  flash.rs  init.rs  lint.rs  mod.rs  pull.rs  setup.rs  show.rs  skill.rs  status.rs  upgrade_check.rs  watch.rs
src/flash/: dfu_util.rs  keymapp.rs  mod.rs  wally.rs  zapp.rs
src/generate/: config_h.rs  features.rs  keymap.rs  mod.rs  rules_mk.rs
src/lint/: mod.rs
src/lint/rules/: custom_keycode_undefined.rs  duplicate_action.rs  home_row_mods_asymmetric.rs  kc_no_in_overlay.rs  large_firmware.rs  layer_name_collision.rs  lt_on_high_freq.rs  mod.rs  mod_tap_on_vowel.rs  not_pulled_recently.rs  orphaned_mod_tap.rs  oryx_newer_than_build.rs  overlay_dangling_keycode.rs  overlay_dangling_position.rs  process_record_user_collision.rs  tt_too_short.rs  unbound_tapping_term.rs  unknown_keycode.rs  unknown_layer_ref.rs  unreachable_layer.rs  unreferenced_custom_keycode.rs  unused_feature_flag.rs
src/pull/: graphql.rs  mod.rs
src/render/: ascii.rs  mod.rs
src/schema/: canonical.rs  features.rs  kb_toml.rs  keycode.rs  layout.rs  mod.rs  naming.rs  oryx.rs
src/schema/geometry/: mod.rs  voyager.rs
src/skill/: embedded.rs  mod.rs
src/util/: fs.rs  git.rs  http.rs  lock.rs  mod.rs  term.rs  toolchain.rs
src/watch/: headless.rs  hid.rs  mod.rs
src/watch/gui/: indicator.rs  layout_view.rs  mod.rs  theme.rs
tests/: attach_detach.rs  auto_pull.rs  cli_smoke.rs  codegen_roundtrip.rs  flash_smoke.rs  layout_roundtrip.rs  lint_rules.rs  pull_mock.rs  render_snapshot.rs  skill_drift.rs
tests/snapshots/: render_snapshot__brd_sys_layer.snap  render_snapshot__gaming_layer.snap  render_snapshot__main_layer.snap  render_snapshot__main_position_names.snap  render_snapshot__sym_num_layer.snap
xtask/: Cargo.toml
xtask/src/: main.rs
