[workspace]
members = [".", "xtask"]
default-members = ["."]

[package]
name = "oryx-bench"
version = "0.2.1"
edition = "2021"
rust-version = "1.78"
build = "build.rs"
authors = ["Enrique Flores <enriquefft@404tf.com>"]
license = "MIT"
description = "A workbench for ZSA keyboard layouts: edit visually in Oryx (or skip it), declarative TOML for QMK features, Zig for advanced behavior, deterministic builds, designed for human + AI agent collaboration."
homepage = "https://github.com/enriquefft/oryx-bench"
repository = "https://github.com/enriquefft/oryx-bench"
documentation = "https://github.com/enriquefft/oryx-bench/blob/main/ARCHITECTURE.md"
readme = "README.md"
keywords = ["keyboard", "qmk", "zsa", "oryx", "voyager"]
categories = ["command-line-utilities", "hardware-support"]

[lib]
name = "oryx_bench"
path = "src/lib.rs"

[[bin]]
name = "oryx-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "gzip"], default-features = false }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
sha2 = "0.10"
console = "0.15"
walkdir = "2"
tempfile = "3"
which = "7"
once_cell = "1"
humantime = "2"
fs2 = "0.4"
rand = "0.9.3"

# `oryx-bench watch` — live runtime indicator + typing trainer.
# Raw HID: talks to the keyboard directly (QMK usage page 0xFF60/0x61);
# no daemon, no "enable API in Settings". See `src/watch/hid.rs`.
# GUI: eframe + egui for the interactive window; audio cues via rodio.
hidapi = { version = "2", default-features = false, features = ["linux-static-hidraw"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "signal", "sync"] }
tokio-stream = "0.1"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
arc-swap = "1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "signal", "test-util"] }
serial_test = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
